<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="fragment.Register">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/biru"
        tools:context=".SignIn">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="130dp"
            app:layout_constraintTop_toTopOf="parent">



            <TextView
                android:id="@+id/TextWelcomeSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginStart="50dp"
                android:text="@string/Register"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/TextSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="50dp"
                android:text="Please fill these data"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TextInputLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                app:endIconMode="clear_text"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:boxBackgroundColor="#222121"
                app:hintTextColor="@color/white"
                app:boxStrokeColor="@color/white"
                android:layout_marginEnd="40dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditNameSignUp"
                    style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                    android:drawablePadding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="41"
                    android:hint="@string/name"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TextInputLayout3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                app:endIconMode="clear_text"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:boxBackgroundColor="#222121"
                app:hintTextColor="@color/white"
                app:boxStrokeColor="@color/white"
                android:layout_marginEnd="40dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditUsernameSignUp"
                    style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                    android:drawablePadding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/username"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TextInputLayout4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                app:endIconMode="clear_text"
                app:counterEnabled="true"
                app:boxBackgroundColor="#222121"
                app:hintTextColor="@color/white"
                app:boxStrokeColor="@color/white"
                android:layout_marginEnd="40dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditEmailSignUp"
                    style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                    android:drawablePadding="10dp"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/email"
                    android:textSize="16sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TextInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                app:helperTextEnabled="true"
                app:helperText="Required*"
                app:helperTextTextColor="#EE4B2B"
                app:endIconMode="password_toggle"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:boxBackgroundColor="#222121"
                app:hintTextColor="@color/white"
                app:boxStrokeColor="@color/white"
                android:layout_marginEnd="40dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditPasswordSignUp"
                    style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                    android:drawablePadding="10dp"
                    android:layout_width="match_parent"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="21"
                    android:hint="@string/password"
                    android:textSize="16sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ButtonSignUp"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="25dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:text="Register"
                android:textSize="16sp"
                android:backgroundTint="@color/merah"
                android:textColor="@color/white"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal">
                <TextView
                    android:id="@+id/FirstTimeSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="90dp"
                    android:text="Already have account?"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/txtSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@id/FirstTimeSignUp"
                    android:text=" Login"
                    android:textColor="@color/merah"
                    android:textSize="16sp" />
            </RelativeLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>